# sway-standard-implementations

./: .gitignore  CHANGELOG.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src14/owned_proxy/: Forc.toml  README.md  fuel-toolchain.toml
src14/owned_proxy/contract/: Forc.toml  fuel-toolchain.toml
src14/owned_proxy/contract/src/: main.sw
src14/owned_proxy/scripts/: Cargo.toml  README.md
src14/owned_proxy/scripts/src/: deploy_and_init.rs  set_proxy_owner.rs  set_proxy_target.rs  utils.rs
src14/owned_proxy/src/: main.sw
tests/: Cargo.toml  Forc.toml  fuel-toolchain.toml
tests/src/: harness.rs
tests/src/src14/: mod.rs
tests/src/src14/owned_proxy/test_artifacts/target_contract/: Forc.toml
tests/src/src14/owned_proxy/test_artifacts/target_contract/src/: main.sw
tests/src/src14/owned_proxy/tests/functions/: initialize_proxy.rs  mod.rs  proxy_owner.rs  proxy_target.rs  set_proxy_owner.rs  set_proxy_target.rs  target_contract_calls.rs
tests/src/src14/owned_proxy/tests/utils/: mod.rs
