[package]
name = "sway-standard-implementations-tests"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.66.4" }
tokio = { version = "1.39.3", features = ["rt", "macros"] }

[[test]]
harness = true
name = "sway-standard-implementations-tests"
path = "src/harness.rs"
