[package]
name = "src14-owned-proxy-scripts"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.17", features = ["env", "derive"] }
fuels = { version = "0.66.3" }
tokio = { version = "1.39.3", features = ["rt", "macros"] }

[lib]
name = "proxy_script_utils"
path = "src/utils.rs"

[[bin]]
name = "deploy_and_init"
path = "src/deploy_and_init.rs"

[[bin]]
name = "set_proxy_owner"
path = "src/set_proxy_owner.rs"

[[bin]]
name = "set_proxy_target"
path = "src/set_proxy_target.rs"
